# resum-LLM-Alzeihmer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alzheimer_paper.csv  app.py  jupyter_main.ipynb  jupyter_main_Thomas.ipynb  main.py  pyproject.toml  requirements.txt
All_articles/: final_state_of_the_art.tex
config/: load_settings.py  settings.yaml
config/modalities/: alzheimer_modalities.py  user_modalities.py
config/prompts/step1/: filter_batch.txt  filter_subject.txt
config/prompts/step2/: clustering.txt  clustering_batch.txt  creation_modality.txt
config/prompts/step3/: assign_articles.txt  cluster_intro.txt  extract_axes.txt  global_conclusion.txt  global_intro.txt  paragraph.txt  reviewer.txt  revision.txt  sot_merge.txt
entities/: paper.py
llm/: LLMFactory.py  base.py  groq.py  ollama.py
pipeline/step1_collect/: arxiv.py  arxiv_search.py  bibtex.py  llm_batch.py  llm_filter.py  run.py  semantic_scholar.py
pipeline/step2_clustering/: clustering.py  clustering_batch.py  creation_modality.py  run.py
pipeline/step3_generation/: assignment.py  axes.py  chunk.py  generate_paragraph.py  global_generality.py  latex.py  reviewer.py  run.py  sot.py
tracking/: client.py  langfuse_prompts.py  prompt_registry.py
utils/: io.py  prompts_local.py  utils.py
